<resources>
    <string name="app_name">Assignment4</string>
    <string name="accelerometer_app">Accelerometer App</string>
    <string name="x_value">X Value:</string>
    <string name="y_value">Y Value:</string>
    <string name="z_value">Z Value:</string>
    <string name="simulation_count">Simulation Count:</string>
    <string name="generate">Generate</string>
    <string name="cancel">Cancel</string>
    <string name="simulate_value">0</string>
    <string name="x_Value">0</string>
    <string name="y_Value">0</string>
    <string name="z_Value">0</string>
    <string name="log_report">Stimulation Count: 0, X:0, Y:0, Z:0</string>
</resources>
