<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="balakrishnan.harini.assignment4.MainActivity">

    <TextView
        android:id="@+id/titleTextView"
        android:layout_width="260dp"
        android:layout_height="55dp"
        android:layout_marginEnd="62dp"
        android:layout_marginStart="62dp"
        android:layout_marginTop="16dp"
        android:text="@string/accelerometer_app"
        android:textColor="@android:color/background_dark"
        android:textColorHighlight="@android:color/background_dark"
        android:textSize="30sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/XtextView"
        android:layout_width="108dp"
        android:layout_height="43dp"
        android:layout_marginStart="38dp"
        android:layout_marginTop="16dp"
        android:text="@string/x_value"
        android:textColor="@color/maroon"
        android:textColorHighlight="@color/maroon"
        android:textColorHint="@android:color/black"
        android:textColorLink="@color/maroon"
        android:textSize="24sp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/titleTextView" />

    <TextView
        android:id="@+id/ZtextView"
        android:layout_width="108dp"
        android:layout_height="43dp"
        android:layout_marginStart="38dp"
        android:layout_marginTop="20dp"
        android:text="@string/z_value"
        android:textColor="@color/maroon"
        android:textColorHint="@android:color/black"
        android:textSize="24sp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/YtextView" />

    <TextView
        android:id="@+id/YtextView"
        android:layout_width="108dp"
        android:layout_height="43dp"
        android:layout_marginStart="38dp"
        android:layout_marginTop="20dp"
        android:text="@string/y_value"
        android:textColor="@color/maroon"
        android:textColorHint="@android:color/black"
        android:textSize="24sp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/XtextView" />

    <TextView
        android:id="@+id/textView3"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="34dp"
        android:layout_marginTop="29dp"
        android:labelFor="@+id/simulateValue"
        android:text="@string/simulation_count"
        android:textColor="@color/colorPrimary"
        android:textColorHint="@color/colorPrimary"
        android:textSize="24sp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/ZtextView" />

    <Button
        android:id="@+id/generate_button"
        android:layout_width="138dp"
        android:layout_height="54dp"
        android:layout_marginStart="36dp"
        android:layout_marginTop="29dp"
        android:background="@color/colorPrimaryDark"
        android:labelFor="@+id/logReport"
        android:text="@string/generate"
        android:textColor="@android:color/background_light"
        android:textColorHint="@android:color/background_light"
        android:textSize="18sp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView3" />

    <Button
        android:id="@+id/cancel_button"
        android:layout_width="117dp"
        android:layout_height="53dp"
        android:layout_marginBottom="112dp"
        android:layout_marginEnd="60dp"
        android:background="@color/cream"
        android:text="@string/cancel"
        android:textColor="@android:color/holo_red_light"
        android:textSize="18sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent" />

    <TextView
        android:id="@+id/zValueText"
        android:layout_width="118dp"
        android:layout_height="54dp"
        android:layout_marginStart="50dp"
        android:layout_marginTop="6dp"
        android:background="@android:drawable/alert_light_frame"
        android:paddingBottom="@dimen/text_margin_width_minor"
        android:paddingEnd="@dimen/text_display_width_minor"
        android:paddingStart="@dimen/text_display_width_minor"
        android:text="@string/z_Value"
        android:textColor="@android:color/darker_gray"
        android:textSize="24sp"
        app:layout_constraintStart_toEndOf="@+id/ZtextView"
        app:layout_constraintTop_toBottomOf="@+id/yValueText" />

    <TextView
        android:id="@+id/yValueText"
        android:layout_width="117dp"
        android:layout_height="56dp"
        android:layout_marginStart="50dp"
        android:layout_marginTop="6dp"
        android:background="@android:drawable/alert_light_frame"
        android:paddingBottom="@dimen/text_margin_width_minor"
        android:paddingEnd="@dimen/text_display_width_minor"
        android:paddingStart="@dimen/text_display_width_minor"
        android:text="@string/y_Value"
        android:textColor="@android:color/darker_gray"
        android:textSize="24sp"
        app:layout_constraintStart_toEndOf="@+id/YtextView"
        app:layout_constraintTop_toBottomOf="@+id/xValueText" />

    <TextView
        android:id="@+id/xValueText"
        android:layout_width="118dp"
        android:layout_height="55dp"
        android:layout_marginStart="50dp"
        android:layout_marginTop="10dp"
        android:background="@android:drawable/alert_light_frame"
        android:paddingBottom="@dimen/text_margin_width_minor"
        android:paddingEnd="@dimen/text_display_width_minor"
        android:paddingStart="@dimen/text_display_width_minor"
        android:text="@string/x_Value"
        android:textColor="@android:color/darker_gray"
        android:textSize="24sp"
        app:layout_constraintStart_toEndOf="@+id/XtextView"
        app:layout_constraintTop_toBottomOf="@+id/titleTextView" />

    <TextView
        android:id="@+id/logReport"
        android:layout_width="327dp"
        android:layout_height="97dp"
        android:layout_marginBottom="8dp"
        android:layout_marginStart="23dp"
        android:layout_marginTop="6dp"
        android:scrollbars="vertical"
        android:text="@string/log_report"
        android:textColor="@color/darkGray"
        android:textSize="14sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/generate_button" />

    <EditText
        android:id="@+id/simulateValue"
        android:layout_width="77dp"
        android:layout_height="33dp"
        android:layout_marginStart="15dp"
        android:layout_marginTop="26dp"
        android:background="@android:color/background_light"
        android:ems="10"
        android:inputType="textPersonName"
        android:paddingEnd="@dimen/text_margin_width_minor"
        android:paddingStart="@dimen/text_display_width_minor"
        android:scrollbars="none"
        android:text="@string/simulate_value"
        android:textSize="24sp"
        app:layout_constraintStart_toEndOf="@+id/textView3"
        app:layout_constraintTop_toBottomOf="@+id/zValueText" />

</android.support.constraint.ConstraintLayout>
